--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
@@ -57,10 +57,10 @@
                     <select class="input form-control" name="priceRank">
                         <option value="0">Mức giá</option>
                         <option value="0">Giá thỏa thuận</option>
-                        <option value="1">< 3-5 triệu</option>
-                        <option value="2">< 5-10 triệu</option>
-                        <option value="3">< 10-40 triệu</option>
-                        <option value="4">< 500 Triệu</option>
+                        <option value="1">3-5 triệu</option>
+                        <option value="2">5-10 triệu</option>
+                        <option value="3">10-40 triệu</option>
+                        <option value="4">500 Triệu</option>
                         <option value="5"> 500 đến 800 Triệu</option>
                         <option value="6">1 đến 2 tỷ</option>
                         <option value="7">2 đến 3 tỷ</option>
