--- a/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -16,7 +16,7 @@
                 @FeatureArticle.ItemList[0].ShotDesc
             </div>
         </div>
-        <div class="col-md-12 home-article border-b" style="padding:0px;height:234px;margin-top:10px">
+        <div class="col-md-12 home-article border-b" style="padding:0px;height:220px;margin-top:10px">
             <div class="scl">
                 @if (FeatureArticle.ItemList.Length >= 2)
                 {
@@ -31,8 +31,6 @@
                 }
             </div>
         </div>
-
-
     }
 </div>
 <div class="col-md-3 ">
@@ -41,30 +39,101 @@
         <div class="featureLand">
             <div class="scl2">
                 @if (ViewData["BestsaleProduct"] != null)
-            {
-                AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
-                if (bestSaleList != null && bestSaleList.Item.Length > 0)
                 {
-                    foreach (ProductItem item in bestSaleList.Item)
+                    AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
+                    int itemCount = bestSaleList.Item.Length;
+                    if (bestSaleList != null && itemCount > 0)
                     {
-
-                            <div class="product-container">
-                                <div class="left-block">
-                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
-                                        <img class="img-responsive" alt="@item.ShortDesc" src="@item.Images" />
-                                    </a>
+                        <ul class="owl-carousel2">
+                            <li>
+                                <div class="product-container">
+                                    <div class="left-block">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[0].PrName, bestSaleList.Item[0].Id)">
+                                            <img class="img-responsive" alt="@bestSaleList.Item[0].ShortDesc" src="@bestSaleList.Item[0].Images" />
+                                        </a>
+                                    </div>
+                                    <div class="right-block">
+                                        <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[0].PrName,bestSaleList.Item[0].Id)">@bestSaleList.Item[0].PrName</a></h5>
+                                    </div>
                                 </div>
-                                <div class="right-block">
-                                    <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a></h5>
+                                @if (itemCount > 1)
+                                {
+                                     <div class="product-container">
+                                    <div class="left-block">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[1].PrName, bestSaleList.Item[1].Id)">
+                                            <img class="img-responsive" alt="@bestSaleList.Item[1].ShortDesc" src="@bestSaleList.Item[1].Images" />
+                                        </a>
+                                    </div>
+                                    <div class="right-block">
+                                        <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[1].PrName,bestSaleList.Item[1].Id)">@bestSaleList.Item[1].PrName</a></h5>
+                                    </div>
                                 </div>
-                            </div>
+                                }
+                            </li>
+                            @if (itemCount > 2)
+                            {
+                                <li>
 
-                        }
+                                    <div class="product-container">
+                                        <div class="left-block">
+                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[2].PrName, bestSaleList.Item[2].Id)">
+                                                <img class="img-responsive" alt="@bestSaleList.Item[2].ShortDesc" src="@bestSaleList.Item[2].Images" />
+                                            </a>
+                                        </div>
+                                        <div class="right-block">
+                                            <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[2].PrName, bestSaleList.Item[2].Id)">@bestSaleList.Item[2].PrName</a></h5>
+                                        </div>
+                                    </div>
+
+                                    @if (itemCount > 3)
+                                    {
+                                        <div class="product-container">
+                                            <div class="left-block">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[3].PrName, bestSaleList.Item[3].Id)">
+                                                    <img class="img-responsive" alt="@bestSaleList.Item[3].ShortDesc" src="@bestSaleList.Item[3].Images" />
+                                                </a>
+                                            </div>
+                                            <div class="right-block">
+                                                <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[3].PrName, bestSaleList.Item[3].Id)">@bestSaleList.Item[3].PrName</a></h5>
+                                            </div>
+                                        </div>
+                                    }
+                                </li>
+                                if (itemCount > 4)
+                                {
+                                    <li>
+
+                                        <div class="product-container">
+                                            <div class="left-block">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[4].PrName, bestSaleList.Item[4].Id)">
+                                                    <img class="img-responsive" alt="@bestSaleList.Item[4].ShortDesc" src="@bestSaleList.Item[4].Images" />
+                                                </a>
+                                            </div>
+                                            <div class="right-block">
+                                                <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[4].PrName, bestSaleList.Item[4].Id)">@bestSaleList.Item[4].PrName</a></h5>
+                                            </div>
+                                        </div>
+
+                                        @if (itemCount > 5)
+                                        {
+                                            <div class="product-container">
+                                                <div class="left-block">
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[5].PrName, bestSaleList.Item[5].Id)">
+                                                        <img class="img-responsive" alt="@bestSaleList.Item[5].ShortDesc" src="@bestSaleList.Item[5].Images" />
+                                                    </a>
+                                                </div>
+                                                <div class="right-block">
+                                                    <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[5].PrName, bestSaleList.Item[5].Id)">@bestSaleList.Item[5].PrName</a></h5>
+                                                </div>
+                                            </div>
+                                        }
+                                    </li>
+                                }
+                            }
+                        </ul>
                     }
                 }
             </div>
         </div>
     </div>
-
 </div>
-
