--- a/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
+++ b/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
@@ -22,7 +22,7 @@
                             }
                         }
                     </select>
-                    <select class="input form-control" name="scat">
+                    <select class="input form-control" name="scat" id="scat">
                         <option value="0">Loại nhà đất</option>
                         @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                     {
@@ -31,7 +31,7 @@
                         {
                             foreach (var chidItem in item.ChildCategory)
                             {
-                        <option value="@chidItem.Id" style="display:none;" class="cct cct_@item.Id">@chidItem.Name</option>
+                             <option value="@chidItem.Id" style="display:none;" class="cct cct_@item.Id">@chidItem.Name</option>
                             }
 
                         }
@@ -57,11 +57,8 @@
                     <select class="input form-control" name="priceRank">
                         <option value="0">Mức giá</option>
                         <option value="0">Giá thỏa thuận</option>
-                        <option value="1">< 3-5 triệu</option>
-                        <option value="2">< 5-10 triệu</option>
-                        <option value="3">< 10-40 triệu</option>
-                        <option value="4">< 500 Triệu</option>
-                        <option value="5"> 500 đến 800 Triệu</option>
+                        <option value="2">5-10 triệu</option>
+                        <option value="3">30-40 triệu</option>
                         <option value="6">1 đến 2 tỷ</option>
                         <option value="7">2 đến 3 tỷ</option>
                         <option value="8">3 đến 5 tỷ</option>
