--- a/BDS_05_BatDongSan_MultiLand/assets/css/style.css
+++ b/BDS_05_BatDongSan_MultiLand/assets/css/style.css
@@ -1358,7 +1358,7 @@ span.notify-right {
 
     #main-menu .navbar .navbar-nav > li > a {
         color: #333;
-        margin: 15px 0;
+        margin: 12px 0;
         padding: 0;
         border-right: 1px solid #cacaca;
         padding: 0 15px;
@@ -1502,11 +1502,11 @@ span.notify-right {
 
     .nav-menu .nav > li > a {
         padding: 15px 25px;
-        background: url('../images/kak.png') no-repeat right center;
+        background: url('/assets/images/kak.png') no-repeat right center;
     }
 
     .nav-menu .navbar-toggle {
-        background: url('../images/bar.png') no-repeat left center;
+        background: url('/assets/images/bar.png') no-repeat left center;
         height: 50px;
         margin: 0;
         padding-right: 3px;
@@ -5931,7 +5931,7 @@ span.notify-right {
     }
 
 .border-b {
-    border: solid 1px #60a5d8;
+    border: solid 1px #ccc;
 }
 
 .tittle-b {
@@ -5955,7 +5955,7 @@ span.notify-right {
 .home-article .post-desc {
     margin-bottom: 3px;
     padding: 3px 0 3px 16px;
-    border-bottom: solid 1px #60a5d8;
+    border-bottom: solid 1px #ccc;
     background: url(/assets/images/icon_title.png) no-repeat 5px center;
 }
 
@@ -5974,7 +5974,14 @@ span.notify-right {
     font-size: 12px;
     font-weight: bold;
 }
-
+@media (max-width:1024px) {
+    .asl-r{
+        display:none;
+    }
+     .asl-l{
+        display:none;
+    }
+}
 @media (min-width:1024px) {
     .featureLand {
         height: 323px;
@@ -5987,6 +5994,11 @@ span.notify-right {
         width: 40%;
     }
 }
+@media (min-width: 1200px) {
+  .container {
+    width: 1024px;
+  }
+}
 .artCt2{    
     padding:15px !important;
 }
@@ -5997,3 +6009,24 @@ span.notify-right {
 }
 .artCt2 .product-container{margin-bottom:20px;}
 #navbar a{font-size:12px;font-weight:bold;}
+.asl-l{
+   
+    top: 170px;
+    position: fixed;
+    left:5px;
+}
+.asl-r{
+    
+    top: 170px;
+    position: fixed;
+    right: 5px;
+}
+.navbar{
+    min-height:30px !important;
+}
+.item-left a img,.item-right a img{
+    max-width:98%;
+}
+.scl2 .left-block img{
+    max-height:100px;
+}
