update price format for theme 5

--- a/Shop_03_multiProduct/Views/Product/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Product/Index.cshtml
@@ -82,7 +82,7 @@
                                             </div>
                                         </span>
                                         <div class="price-block">
-                                            <div class="price-box"> <span class="regular-price" id="product-price-123"> <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)0</span> </span> </div>
+                                            <div class="price-box"> <span class="regular-price" id="product-price-123"> <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
                                             @if (@item.IsInstock)
                                             {
                                                 <p class="availability in-stock">
