--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -111,7 +111,11 @@
                                                         foreach (ProductItem item in saleProduct)
                                                         {
                                                             <div class="grid12-3">
-                                                                <div><img src="@item.Images" alt="@item.PrName"></div>
+                                                                <div>
+                                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                                        <img src="@item.Images" alt="@item.PrName">
+                                                                    </a>
+                                                                </div>
                                                                 <h4 class="heading">Giảm giá 20%</h4>
                                                                 <p>@item.ShortDesc.Substring(0, 61)</p>
                                                             </div>
