--- a/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -2,35 +2,38 @@
 @using AnperoFrontend.WebService;
 <div class="col-md-6">
 
-    @if (ViewData["FeatureArticle"] != null)
+    @if (ViewData["BestsaleProduct"] != null)
     {
-        SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
-        <div class="col-md-12 faticle" style="padding:0px;">
-            <div class="col-md-4 image-hover2">
-                <a href="@Anpero.StringHelpper.GetArticleLink(FeatureArticle.ItemList[0].Title,FeatureArticle.ItemList[0].Id)"><img src="@FeatureArticle.ItemList[0].Thumb" alt="@FeatureArticle.ItemList[0].Title"></a>
+        AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];        
+        if (bestSaleList.Item.Length > 0)
+        {
+            <div class="col-md-12 faticle" style="padding:0px;">
+                <div class="col-md-4 image-hover2">
+                    <a href="@Anpero.StringHelpper.GetArticleLink(bestSaleList.Item[0].PrName,bestSaleList.Item[0].Id)"><img src="@bestSaleList.Item[0].Images" alt="@bestSaleList.Item[0].PrName"></a>
+                </div>
+                <div class="post-desc">
+                    <h5 class="post-title">
+                        <a href="@Anpero.StringHelpper.GetArticleLink(bestSaleList.Item[0].PrName,bestSaleList.Item[0].Id)">@Anpero.StringHelpper.SubString(80, bestSaleList.Item[0].PrName)</a>
+                    </h5>
+                    @bestSaleList.Item[0].ShortDesc
+                </div>
             </div>
-            <div class="post-desc">
-                <h5 class="post-title">
-                    <a href="@Anpero.StringHelpper.GetArticleLink(FeatureArticle.ItemList[0].Title,FeatureArticle.ItemList[0].Id)">@Anpero.StringHelpper.SubString(80, FeatureArticle.ItemList[0].Title)</a>
-                </h5>
-                @FeatureArticle.ItemList[0].ShotDesc
-            </div>
-        </div>
-        <div class="col-md-12 home-article border-b" style="padding:0px;height:220px;margin-top:10px">
-            <div class="scl">
-                @if (FeatureArticle.ItemList.Length >= 2)
-                {
-                    for (int i = 1; i < FeatureArticle.ItemList.Length; i++)
+            <div class="col-md-12 home-article border-b" style="padding:0px;height:220px;margin-top:10px">
+                <div class="scl">
+                    @if (bestSaleList.Item.Length >= 2)
                     {
-                        <div class="post-desc">
-                            <h5 class="post-title">
-                                <a href="@Anpero.StringHelpper.GetArticleLink(FeatureArticle.ItemList[i].Title,FeatureArticle.ItemList[i].Id)">@Anpero.StringHelpper.SubString(80, FeatureArticle.ItemList[i].Title)</a>
-                            </h5>
-                        </div>
+                        for (int i = 1; i < bestSaleList.Item.Length; i++)
+                        {
+                            <div class="post-desc">
+                                <h5 class="post-title">
+                                    <a href="@Anpero.StringHelpper.GetArticleLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@Anpero.StringHelpper.SubString(80, bestSaleList.Item[i].PrName)</a>
+                                </h5>
+                            </div>
+                        }
                     }
-                }
+                </div>
             </div>
-        </div>
+        }
     }
 </div>
 <div class="col-md-3 ">
@@ -38,9 +41,9 @@
     <div class="border-b">
         <div class="featureLand">
             <div class="scl2">
-                @if (ViewData["BestsaleProduct"] != null)
+                @if (ViewData["featureleProduct"] != null)
                 {
-                    AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
+                    AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["featureleProduct"];
                     int itemCount = bestSaleList.Item.Length;
                     if (bestSaleList != null && itemCount > 0)
                     {
@@ -58,16 +61,16 @@
                                 </div>
                                 @if (itemCount > 1)
                                 {
-                                     <div class="product-container">
-                                    <div class="left-block">
-                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[1].PrName, bestSaleList.Item[1].Id)">
-                                            <img class="img-responsive" alt="@bestSaleList.Item[1].ShortDesc" src="@bestSaleList.Item[1].Images" />
-                                        </a>
+                                    <div class="product-container">
+                                        <div class="left-block">
+                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[1].PrName, bestSaleList.Item[1].Id)">
+                                                <img class="img-responsive" alt="@bestSaleList.Item[1].ShortDesc" src="@bestSaleList.Item[1].Images" />
+                                            </a>
+                                        </div>
+                                        <div class="right-block">
+                                            <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[1].PrName,bestSaleList.Item[1].Id)">@bestSaleList.Item[1].PrName</a></h5>
+                                        </div>
                                     </div>
-                                    <div class="right-block">
-                                        <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[1].PrName,bestSaleList.Item[1].Id)">@bestSaleList.Item[1].PrName</a></h5>
-                                    </div>
-                                </div>
                                 }
                             </li>
                             @if (itemCount > 2)
@@ -116,16 +119,16 @@
 
                                         @if (itemCount > 5)
                                         {
-                                            <div class="product-container">
-                                                <div class="left-block">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[5].PrName, bestSaleList.Item[5].Id)">
-                                                        <img class="img-responsive" alt="@bestSaleList.Item[5].ShortDesc" src="@bestSaleList.Item[5].Images" />
-                                                    </a>
-                                                </div>
-                                                <div class="right-block">
-                                                    <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[5].PrName, bestSaleList.Item[5].Id)">@bestSaleList.Item[5].PrName</a></h5>
-                                                </div>
+                                        <div class="product-container">
+                                            <div class="left-block">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[5].PrName, bestSaleList.Item[5].Id)">
+                                                    <img class="img-responsive" alt="@bestSaleList.Item[5].ShortDesc" src="@bestSaleList.Item[5].Images" />
+                                                </a>
                                             </div>
+                                            <div class="right-block">
+                                                <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[5].PrName, bestSaleList.Item[5].Id)">@bestSaleList.Item[5].PrName</a></h5>
+                                            </div>
+                                        </div>
                                         }
                                     </li>
                                 }
