update home slide style

--- a/BDS_05_BatDongSan_MultiLand/Views/Home/Index.cshtml
+++ b/BDS_05_BatDongSan_MultiLand/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 home-article">
-                        <div class="tittle-b">Nhà môi giới tiêu biểu</div>
+                        <div class="tittle-b">Phong thủy</div>
                         <div class="border-b artCt2">
                             @if (ViewData["TopNewArticle"] != null)
                             {
